tests/idris2/error011/expected
1/1: Building ConstructorDuplicate (ConstructorDuplicate.idr)
Error: Main.B is already defined.

ConstructorDuplicate.idr:1:14--1:15
 1 | data A = B | B
                  ^

Error: Main.D is already defined.

ConstructorDuplicate.idr:5:3--5:4
 1 | data A = B | B
 2 | 
 3 | data C : Type -> Type where
 4 |   D : C Int
 5 |   D : C String
       ^

